# dfbi-py

./: LICENSE  README.md  RELEASE_NOTES.md  fingerprint_publication_notebook.ipynb  run_examples.ps1  run_examples.sh
bench/: nn_benchmark.py
bench/datasets/: blogs_prep.py
bench/mini_corpus/a1/: t1.txt  t2.txt
bench/mini_corpus/a2/: u1.txt  u2.txt
dfbi_lib_0_1_6_wave_kernels/: README.md  pyproject.toml
dfbi_lib_0_1_6_wave_kernels/src/dfbi/: __init__.py  alphabet.py  bench.py  cli.py  decay.py  fetch_pan.py  fingerprints.py  kernels.py  metrics.py  phase.py  prepare_pan.py  utils.py  viz.py
dfbi_lib_0_1_6_wave_kernels/src/dfbi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dfbi_lib_0_1_6_wave_kernels/tests/: test_dfbi_basic.py  test_wave_phase.py
docs/: README_EN.md  README_RU.md
examples/: README.md
examples/01_basic_analysis/: config.yaml  example.py
examples/02_authorship_attribution/: config.yaml  example.py
examples/03_language_detection/: config.yaml  example.py
examples/04_wavelet_analysis/: config.yaml  example.py
examples/05_batch_processing/: config.yaml  example.py  similarity_results.json
examples/06_performance_optimization/: benchmark_results.json  config.yaml  example.py
examples/07_blog_authorship_analysis/: config.yaml  example.py
examples/dfbi_example/: README.md  complex_blogs_dfbi_extended.py
experiments/: DFBI_PAN_experiments.ipynb  dfbi_analysis_with_global.py  pan_grid.py  quickstart.py
experiments/data/: chekhov.txt  tolstoy.txt
experiments/demo_results/: preview.csv
(+11 files in other folders)
